--- a/Data_Encoding.ipynb
+++ b/Data_Encoding.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We used data encoding in order to process features of our data that is otherwise categorical. The following code creates two different ways to specifically use one hot encoding to transform categorical data into usable, numerical data. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing all the necessary packages for data encoding\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading in a file we want to encode as an example\n",
     "company_data = pd.read_csv(\"CompanyData.csv\")\n",
     "company_data.drop(1760, axis=0, inplace=True)\n",
     "company_data.drop(['Unnamed: 15', ' City', ' Phone', ' Fax', ' Zip', ' Zip2', ' Plugger', ' Driller', ' Financial Security Provider', ' Address 1', ' Address 2'], axis=1, inplace=True)"
@@ -174,18 +190,22 @@
     }
    ],
    "source": [
-    "# print(company_data.columns)\n",
-    "# print(company_data.dtypes[' State'])\n",
     "company_data"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encodes a more complex dataframe, given a column name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encodes a dataframe given a column name\n",
     "def encoding(df, col_name):\n",
     "    for col in df.columns:\n",
     "        if col != col_name:\n",
@@ -196,12 +216,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encodes a more simple dataframe with only one column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encodes a one column dataframe\n",
     "def simple_encoding(df):\n",
     "    encoder=ce.OneHotEncoder(cols=df.columns[0],handle_unknown='return_nan',return_df=True,use_cat_names=True)\n",
     "    data_encoded = encoder.fit_transform(df)\n",
@@ -209,8 +235,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -591,18 +624,19 @@
        "[1760 rows x 41 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Using the encoding function on our company_data dataframe, with us encoding the \" State\" column\n",
     "encoding(company_data, \" State\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -673,19 +707,20 @@
        "6    NY"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Using the simple encoding function on a newly created one column dataframe\n",
     "data2=pd.DataFrame({'State':['TX','TX','NY','LA','CA','TX','NY']})\n",
     "data2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +823,7 @@
        "6       0.0       1.0       0.0       0.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,24 +833,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testing with simple data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=pd.DataFrame({'Animal':['Cat','Cat','Dog','Fish','Dog','Cat','Hamster'], 'State':['TX','TX','NY','LA','CA','TX','NY']})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -894,18 +913,20 @@
        "6  Hamster    NY"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Testing again with general encoding function, with self created data and encoding the \"Animal\" column\n",
+    "data=pd.DataFrame({'Animal':['Cat','Cat','Dog','Fish','Dog','Cat','Hamster'], 'State':['TX','TX','NY','LA','CA','TX','NY']})\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1029,7 @@
        "6         0.0         0.0          0.0             1.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
