--- a/CleanedData.ipynb
+++ b/CleanedData.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make dataframe for company dataset\n",
     "company_data = pd.read_csv(\"Datasets/CompanyData.csv\")"
    ]
   },
@@ -27,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop irrelevent rows\n",
     "company_data.drop(1760, axis=0, inplace=True)\n",
     "company_data.drop(['Unnamed: 15', ' City', ' Phone', ' Fax', ' Zip', ' Zip2', ' Plugger', ' Driller', ' Financial Security Provider', ' Address 1', ' Address 2'], axis=1, inplace=True)"
    ]
@@ -364,6 +367,7 @@
     }
    ],
    "source": [
+    "#drop unneccessary columns\n",
     "company_data.drop([' Operator', ' Status'], axis=1, inplace=True)"
    ]
   },
@@ -373,6 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert to file\n",
     "company_data.to_csv('CleanedCompanyData.csv', index=False)"
    ]
   },
@@ -382,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make dataframe for production dataset\n",
     "production_data = pd.read_csv(\"Datasets/WellProduction.csv\")"
    ]
   },
@@ -630,6 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop irrelevent rows\n",
     "production_data.drop([' Operator Name', 'Year', '   API Well Number', 'Well Type'], axis=1, inplace=True)"
    ]
   },
@@ -639,6 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#make dataframe for transfer dataset\n",
     "transfer_data = pd.read_csv(\"Datasets/WellTransferData.csv\")"
    ]
   },
@@ -657,6 +665,7 @@
     }
    ],
    "source": [
+    "#make dataframe for general wells dataset\n",
     "wells_data = pd.read_csv(\"Datasets/wellspublic.csv\")"
    ]
   },
@@ -666,6 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop irrelevent rows\n",
     "wells_data.drop([\"Cnty\", \"Hole\", \"SideTrck\", \"Completion\", \"Location_Verified\", \"LINK\", \"Spacing_Acres\", \"Integration\", \"Map_Symbol\", \"Original_well_type\", \"Permit_Fee\", \"Objective_formation\", \"Spacing\", \"Dt_Hearing\", \"Dt_Mod\", \"GeneralWellType\", \"GeneralWellStatus\", \"Depth_Fee\", \"Measured_depth\", \"Kickoff\", \"True_vertical_depth\", \"Bottom_hole_latitude\", \"Bottom_hole_location\", \"Surface_latitude\", \"Well_Type\", \"Well_Status\", \"Bottom_hole_longitude\", \"Surface_location\", \"Proposed_depth\", \"State_lease\", \"Slant\", \"Elevation\", \"DrilledDepth\", \"Date_Status\", \"Date_Permit_Application\", \"Permit_Issued\", \"Date_Spudded\", \"confid\", \"town\", \"quad\", \"quadsec\", \"Producing_name\", \"Producing_formation\", \"Financial_security\", \"County\", \"Region\", \"Surface_Longitude\", \"Date_well_confidential\", \"Date_Total_Depth\"], axis=1, inplace=True)"
    ]
   },
@@ -1022,6 +1032,7 @@
     }
    ],
    "source": [
+    "#manually rename rows to eliminate possible spacing issues\n",
     "wells_data.columns = ['API_WellNo', 'Well Name', 'Company_name', 'Operator_number', 'Date_Well_Completed', 'Date_well_plugged']\n",
     "wells_data.dropna(subset=['API_WellNo', 'Well Name', 'Operator_number', 'Date_Well_Completed'], inplace=True)\n",
     "wells_data"
@@ -1033,6 +1044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#reformat dates based on century\n",
     "from datetime import datetime\n",
     "import datetime as dt\n",
     "def fix_date(x):\n",
@@ -1713,6 +1725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loop through and make a columb of all well data well name entries, without leading or ending whitespace\n",
     "wells_data_names = []\n",
     "for x in range(22311):\n",
     "    wells_data_names.append(str(wells_data.loc[x].at['Well Name']).strip())"
@@ -1724,6 +1737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loop through and make a column of all production data well name entries, without leading or ending whitespace\n",
     "production_data_names = []\n",
     "for x in range(13127):\n",
     "    production_data_names.append(str(production_data.loc[x].at['Well Name']).strip())"
@@ -1735,6 +1749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Replace old Well Name column with new\n",
     "wells_data.drop('Well Name', axis=1, inplace = True)\n",
     "wells_data['Well Name'] = wells_data_names"
    ]
@@ -1745,6 +1760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Replace old Well Name column with new\n",
     "production_data.drop('Well Name', axis=1, inplace = True)\n",
     "production_data['Well Name'] = production_data_names"
    ]
@@ -1755,6 +1771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Merge Data\n",
     "merged_data = wells_data.merge(production_data, on = 'Well Name', how = 'inner')"
    ]
   },
@@ -2047,7 +2064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
